# nice_and_easy

./: .gitignore  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: publish.yml
src/: back.rs  bounce.rs  circ.rs  cubic.rs  ease.rs  easing.rs  elastic.rs  expo.rs  lib.rs  linear.rs  quad.rs  quart.rs  quint.rs  sine.rs  util.rs
tests/: easing.rs
