[package]
name = "nice_and_easy"
version = "1.0.1"
edition = "2021"
license="MIT"
authors = ["Peter Gilmour <petergilmour1987@gmail.com>"]
description="A minimalistic Rust library for smooth and effortless easing functions"
documentation="https://docs.rs/nice_and_easy"
homepage="https://github.com/petergilmour1987/nice_and_easy"
repository="https://github.com/petergilmour1987/nice_and_easy"
keywords=["easing","animation","tween","maths","math"]
readme = "README.md"
categories = ["algorithms", "mathematics"]

[dependencies]
num-traits = "0.2.19"

[dev-dependencies]
approx = "0.5.1"
